# basecamp-integration

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  template.example.yaml
.claude/: settings.local.json
app/: cli.py  client.py  main.py
app/routes/: people.py  projects.py  todos.py
app/templates/: base.html  people.html  projects.html  todolists.html  todos.html
app/templates/partials/: todo_item.html  todolist_row.html
oauth/: main.py  token_store.py
