[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "basecamp-integration"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "jinja2>=3.1",
    "click>=8.1",
    "pyyaml>=6.0",
    "python-multipart>=0.0.9",
]

[project.scripts]
basecamp-cli = "app.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["oauth*", "app*"]
